yew-macro/tests/props_macro/resolve-prop-fail.stderr
error[E0277]: the trait bound `std::vec::Vec<_>: yew::html::Properties` is not satisfied
  --> $DIR/resolve-prop-fail.rs:30:17
   |
30 |     yew::props!(Vec<_> {});
   |                 ^^^ the trait `yew::html::Properties` is not implemented for `std::vec::Vec<_>`

error[E0277]: the trait bound `MyComp: yew::html::Properties` is not satisfied
  --> $DIR/resolve-prop-fail.rs:31:17
   |
31 |     yew::props!(MyComp {});
   |                 ^^^^^^ the trait `yew::html::Properties` is not implemented for `MyComp`

error[E0277]: the trait bound `MyNotAComponent: yew::component::Component` is not satisfied
  --> $DIR/resolve-prop-fail.rs:32:17
   |
32 |     yew::props!(MyNotAComponent::Properties {});
   |                 ^^^^^^^^^^^^^^^ the trait `yew::component::Component` is not implemented for `MyNotAComponent`
